--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <html>
-<head>
-<title>Invie</title>
-</head>
-<body>
-</body>
+	<head>
+		<title>Invie</title>
+		<style media="screen">
+			body{
+				margin: 0;
+			}
+			img{
+				max-width: 100%;
+				vertical-align:top;
+			}
+	</head>
+	<body>
+		<img src="header.jpg">
+	</body>
 </html>
